--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -54,7 +54,7 @@ a.btn {
 #loginEmailReminderText
 {
   margin-left: 8px;
-  font-size: 0.87em; 
+  font-size: 0.87em;
   text-align: left;
   padding: 0.1em auto;
   color: #5a5a5a;
@@ -1015,6 +1015,25 @@ sub.pointer:hover {
   position: relative;
   top: -2px;
 }
+
+#profileConsentList {
+  font-size: 0.95em;
+  max-width: 100%;
+  padding: 0.1em;
+}
+#profileConsentList .consentlist-header {
+  background-color: #7d826e;
+  color: #FFF;
+  font-weight: normal;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+}
+#profileConsentList .consentlist-cell{
+  background-color: #fbf9f9;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+}
+
 #identityVerificationContainer {
   padding: 2em 1.5em;
   margin: 1em auto;
@@ -1153,6 +1172,11 @@ div.input-group.date {
   table.profile-audit-log {
     font-size: 0.7em;
   }
+
+  #profileConsentList {
+    font-size: 0.7em;
+  }
+
   .create-account-container {
     padding: 3.5em 3em;
     width: 90%;
