--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1166,6 +1166,22 @@ color: #777
   top:-2px;
 }
 
+#profileConsentList {
+  font-size: 0.95em;
+  max-width: 100%;
+  padding: 0.1em;
+  .consentlist-header {
+    background-color: @rowBackgroundColor;
+    color: #FFF;
+    font-weight: normal;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+  }
+  .consentlist-cell{
+    background-color: #fbf9f9;
+  }
+}
+
 #identityVerificationContainer {
   padding: 2em 1.5em;
   margin: 1em auto;
@@ -1291,6 +1307,9 @@ div.input-group.date {
   }
   table.profile-audit-log {
     font-size: 0.7em;
+  }
+  #profileConsentList {
+    font-size: 0.7em
   }
   .create-account-container {
     padding: 3.5em 3em;
