minor styling fixes to profile create page

--- a/portal/templates/profile_create.html
+++ b/portal/templates/profile_create.html
@@ -40,7 +40,7 @@
                         <div class="indent">
                             <div class="radio">
                                 <label>
-                                    <input type="radio" name="pca_localized" id="pca_localized_yes" value="true" style="position:relative; top:-2"> {{ _("Yes") }}
+                                    <input type="radio" name="pca_localized" id="pca_localized_yes" value="true"> {{ _("Yes") }}
                                 </label>
                             </div>
                             <div class="radio">
