--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -515,7 +515,7 @@
 
 {% macro profileRole(person, current_user) -%}
     {% if (person and current_user) and current_user.has_role('admin') and not person.has_role('service') %}
-        <h4 class="text-muted">{{ _("for") + " " + person.username }}</h4>
+        <h4 class="text-muted">{% if person and person.username %}{{ _("for") + " " + person.username }} {% endif %}</h4>
         <p class="small-text text-muted">{{ _("Editable by admins only.") }}</p>
         <!-- roles are populated in main.js -->
         <div class="form-group" id="rolesGroup" style="margin-left: 10px">
@@ -1043,7 +1043,7 @@
 
     </div>
     <br/>
-    <form id="procedureForm" class="form-inline event-element to-validate" data-toggle="validator">
+    <form id="procedureForm" class="form-inline event-element">
 
             <p class="text-muted">{{ _("Add a treatment") }}:</p>
             <div class="row">
@@ -1082,10 +1082,10 @@
                 <label class="procedureDateLabel">{{ _("Date") }}:</label>
                 <div class="flex">
                     <div>
-                        <input class="form-control" id="procDay" name="procDay"  type="text" placeholder="DD" patterntype="text" maxlength="2" required="" pattern="([1-9]|[12][0-9]|3[01])">
+                        <input class="form-control" id="procDay" name="procDay" type="text" placeholder="DD" maxlength="2" >
                     </div>
                     <div>
-                        <select class="form-control" name="procMonth" id="procMonth" required="">
+                        <select class="form-control" name="procMonth" id="procMonth">
                             <option value="">{{ _("Month") }}...</option>
                             <option value="01">{{ _("January") }}</option>
                             <option value="02">{{ _("February") }}</option>
@@ -1102,11 +1102,11 @@
                         </select>
                     </div>
                     <div>
-                        <input class="form-control" id="procYear" name="procYear" placeholder="YYYY" type="text" maxlength="4"  required="" pattern="\d{4}">
+                        <input class="form-control" id="procYear" name="procYear" placeholder="YYYY" type="text" maxlength="4">
                     </div>
                 </div>
                 <div class="row">
-                     <div class="col-md-5 col-xs-10">
+                     <div class="col-md-9 col-xs-10">
                         <div id="procDateErrorContainer" class="help-block with-errors"></div>
                      </div>
                 </div>
